# standalone

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
bootstrap/: Cargo.toml
bootstrap/src/: main.rs  sample_hello_world.rs
bootstrap/src/jump_to_dram/: allwinner_d1.rs
bootstrap/src/sample_hello_world/: allwinner_d1.rs
bootstrap/src/sample_spi_flash/: allwinner_d1.rs
d1-rom-rt/: Cargo.toml  build.rs
d1-rom-rt/examples/: rom-rt-main.rs
d1-rom-rt/macros/: Cargo.toml
d1-rom-rt/macros/src/: lib.rs
d1-rom-rt/src/: lib.rs  mctl.rs
hal/aw-mctl/: Cargo.toml  README.md
hal/aw-mctl/src/: com.rs  lib.rs  phy.rs
hal/aw-soc/: Cargo.toml  README.md
hal/aw-soc/src/: ccu.rs  com.rs  gpio.rs  lib.rs  phy.rs  spi.rs  uart.rs
hal/aw-soc/src/wafer/: d1.rs
hal/base-address/: Cargo.toml
hal/base-address/src/: lib.rs
hal/d1-hal/: Cargo.toml  README.md
hal/d1-hal/src/: lib.rs  uart.rs
hal/flashes/: Cargo.toml
hal/flashes/src/: lib.rs
machine/: Cargo.toml  build.rs
machine/src/: board.rs  console.rs  dynamic.rs  fdt.rs  main.rs  opaque.rs  reset.rs
machine/src/fdt/: clint.rs  sifive_test.rs  uart16550.rs
rom-rt/: Cargo.toml  build.rs
rom-rt/examples/: rom-rt-main.rs
rom-rt/macros/src/: lib.rs
rom-rt/src/: lib.rs  soc.rs
rom-rt/src/soc/: allwinner_d1.rs
service/: Cargo.toml  README.md
src/: lib.rs  supervisor.rs
src/driver/: mod.rs  ns16550.rs
standalone/: Cargo.toml  build.rs
standalone/src/: console.rs  main.rs  supervisor.rs  trap_vec.rs
standalone/src/execute/: mod.rs
standalone/src/interface/: mod.rs
supervisor/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: app.rs  build.rs  locale.rs  main.rs  term.rs  tool.rs  ui.rs
xtask/src/tool/: xfel.rs
xtask/src/ui/: allwinner_d1_series.rs  bootstrap.rs  dynamicinfo_ident.rs  fdt_ident.rs  home.rs  language.rs  machine_mode.rs  platform_support.rs  sample_program.rs  sophgo_2002_series.rs  standard_sbi_features.rs
