# todo: this should be a workspace meta configuration

[package]
name = "rustsbi-standalone"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { git = "https://github.com/rustsbi/rustsbi", commit = "9ab2ea9d" }
riscv = "0.9.0"
spin = "*"
uart_16550 = { version = "0.2.18", optional = true }

[dependencies.memoffset]
version = "0.7"
features = ["unstable_const"]

[features]
default = ["dep:uart_16550"]
