[workspace]
resolver = "2"
members = [
    "bootstrap",
    "machine",
    "supervisor",
    "hal/flashes",
    "xtask",
]
default-members = ["xtask"]

[workspace.package]
edition = "2021"
license = "MulanPSL-2.0 OR MIT"
repository = "https://github.com/rustsbi/standalone"

[profile.release]
debug = true
