[package]
name = "rustsbi-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d1-rom-rt = { path = "../d1-rom-rt", features = ["log"]}

[features]
default = ["jump-to-dram"]
jump-to-dram = []
sample-hello-world = []
