[package]
name = "rustsbi-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d1-rom-rt = { path = "../d1-rom-rt", features = ["log"]}
flashes = { path = "../hal/flashes", optional = true }

[features]
default = ["jump-to-dram"]
jump-to-dram = ["dep:flashes"]
sample-hello-world = []
sample-spi-flash = ["dep:flashes"]
