[package]
name = "rustsbi-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d1-rom-rt = { path = "../d1-rom-rt" }
flashes = { path = "../hal/flashes", optional = true }
aw-soc = { path = "../hal/aw-soc", optional = true }
embedded-hal = { version = "1.0.0-alpha.9", optional = true }

[features]
default = ["sample-spi-flash"]
jump-to-dram = ["dep:flashes", "d1-rom-rt/log"]
sample-hello-world = ["d1-rom-rt/log"]
sample-spi-flash = ["dep:aw-soc", "dep:flashes", "dep:embedded-hal"]
