[package]
name = "d1-rom-rt"
description = "ROM runtime on SoCs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d1-rom-rt-macros = { path = "macros" }
d1-hal = { path = "../hal/d1-hal" }
d1-pac = "0.0.31"
embedded-hal = "1.0.0-alpha.9"
embedded-hal-nb = "1.0.0-alpha.1"
nb = "1.1.0"
spin = { version = "0.9.5", optional = true }
ufmt = { version = "0.2.0", optional = true }

[features]
log = ["dep:spin", "dep:ufmt"]
