cargo-features = ["per-package-target"]

[package]
name = "rustsbi-machine"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
forced-target = "riscv64imac-unknown-none-elf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.11.0"

[features]
default = []
