cargo-features = ["per-package-target"]

[package]
name = "rustsbi-machine"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
forced-target = "riscv64imac-unknown-none-elf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtb-walker = "0.1.3"
rcore-console = "0.0.0"
riscv = "0.11.0"
rustsbi = { version = "0.4.0-alpha.1", features = ["machine"] }
spin = "0.9.8"
uart16550 = "0.0.1"

[features]
default = []
