cargo-features = ["per-package-target"]

[package]
name = "rustsbi-machine"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
forced-target = "riscv64imac-unknown-none-elf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aclint = "0.0.0"
dtb-walker = { git = "https://github.com/YdrMaster/dtb-walker" }
log = "0.4.20"
riscv = "0.11.0"
rustsbi = { version = "0.4.0", features = ["machine"] }
spin = "0.9.8"
sifive-test-device = "0.0.0"
uart16550 = "0.0.1"

[features]
default = ["fdt", "dynamic"]
# Support for Flattened Device Tree.
#
# The flattened device tree resides in the opaque register (i.e., a1) defined in the SBI standard.
fdt = []
# Support for Dynamic Information.
#
# Dynamic information is not a standard SBI feature, but it exists in some SBI implementations.
dynamic = []
