[package]
name = "rom-rt"
description = "ROM runtime on SoCs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rom-rt-macros = { path = "macros" }
d1-pac = { version = "0.0.31", optional = true }

[features]
allwinner-d1 = ["dep:d1-pac"]
doc = ["dep:d1-pac"]
