[package]
name = "rustsbi-standalone"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = "0.3.0"
fast-trap = { git = "https://github.com/YdrMaster/fast-trap", rev = "ffb40e2", features = [
    "riscv-m",
] }
riscv = "0.10.0"
spin = "*"
uart_16550 = { version = "0.2.18", optional = true }

[dependencies.memoffset]
version = "0.7"
features = ["unstable_const"]

[features]
default = ["dep:uart_16550"]
