[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"
crossterm = "0.25"
sys-locale = "0.2.4"
once_cell = "1.17.1"
clap = { version = "4.1.11", features = ["cargo", "derive"] }
toml_edit = { version = "0.19.7", features = ["serde"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_variant = "0.1.2"
clap-verbosity-flag = "2.0.0"
os-xtask-utils = "0.0.0"
log = "0.4.17"
byteorder = "1.4.3"
env_logger = "0.10.0"
