[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
sys-locale = "0.3.1"
once_cell = "1.19.0"
clap = { version = "4.5.3", features = ["cargo", "derive"] }
toml_edit = { version = "0.22.9", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_variant = "0.1.2"
clap-verbosity-flag = "2.2.0"
os-xtask-utils = "0.0.0"
log = "0.4.21"
byteorder = "1.5.0"
env_logger = "0.11.3"
